--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.1",
     "@mui/styles": "^5.11.1",
     "@reduxjs/toolkit": "^1.9.1",
@@ -22,11 +23,15 @@
     "@types/react-redux": "^7.1.24",
     "classnames": "^2.3.2",
     "humps": "^2.0.1",
+    "i18next": "^22.4.11",
+    "i18next-xhr-backend": "^3.2.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6.0.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
